work on process page
Finished most of process page, now starting case study 3rd page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="cursor"></div>
   <header class="header">
     <nav class="nav">
       <ul>
@@ -18,7 +17,8 @@
       </ul>
     </nav>
   </header>
-    <video autoplay loop muted poster="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4">
+  <div>
+    <video playsinline autoplay muted="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4">
     </video>
       <div class="me">
     <h2>JAKE&nbspWOODARD</h2>
