--- a/process.html
+++ b/process.html
@@ -18,7 +18,91 @@
     </nav>
   </header>
   <div class="mainProcess">
-    <img autoplay loop muted poster="images/sand-still.png" class="largerSize" src="images/colored-sand.mp4">
+    <video playsinline autoplay muted="images/sand-still.png" class="largerSize" src="images/colored-sand.mp4">
+    </video>
+
+    <div class="processShowcase">
+      <img src="images/crossword.png" class="crossword">
+      <img src="images/pin1.png" class="terriblePin">
+      <img src="images/pin2.png" class="auroraPin">
+      <img src="images/pin1.png" class="screenPin">
+      <img src="images/terriblefate-mini.png" class="terriblefate-mini">
+      <img src="images/aurorablue.png" class="auora">
+      <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint"></a> 
+    </div>
+
+    <form action="contact-confirmationpage.html" method="get">
+      <div class="formColumn">
+        <h3>Want something designed? Contact me directly or submit an inquiry!</h3>
+
+        <ul>
+
+          <!-- EMAIL SVG AND LINK -->
+
+          <li><a href="mailto:jpwoodard@yahoo.com"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+         <style type="text/css">
+         </style>
+         <g>
+           <path class="st0" d="M29.8,34.4c-1.4,0-2.8-0.4-4.1-1.2L0.4,17.7l1.9-3.1l25.2,15.5c1.4,0.9,3,0.9,4.4,0l25.2-15.5l1.9,3.1
+             L33.9,33.2C32.6,34,31.2,34.4,29.8,34.4z"/>
+         </g>
+         <g>
+           <path class="st0" d="M48.4,59.2H11.7C5.4,59.2,0.2,54,0.2,47.6V12.8c0-6.4,5.2-11.6,11.6-11.6h36.7C54.8,1.2,60,6.4,60,12.8v34.9
+             C60,54,54.8,59.2,48.4,59.2z M11.7,4.8c-4.4,0-7.9,3.6-7.9,7.9v34.9c0,4.4,3.6,7.9,7.9,7.9h36.7c4.4,0,7.9-3.6,7.9-7.9V12.8
+             c0-4.4-3.6-7.9-7.9-7.9H11.7z"/>
+         </g>
+         </svg>&nbsp;jpwoodard@yahoo.com</a></li>
+
+         <!-- INSTAGRAM SVG AND LINK -->
+
+          <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+            <style type="text/css">
+            </style>
+            <g id="insta">
+              <g id="Rectangle_1">
+                <path class="st0" d="M33.2,59.6H27c-12.1,0-18.2,0-22.3-4.1c-4.1-4.1-4.1-10.2-4.1-22.3V27c0-12.1,0-18.2,4.1-22.3
+                  C8.8,0.6,14.9,0.6,27,0.6h6.2c12.1,0,18.2,0,22.3,4.1c4.1,4.1,4.1,10.2,4.1,22.3v6.2c0,12.1,0,18.2-4.1,22.3
+                  C51.4,59.6,45.3,59.6,33.2,59.6z M27,3.9c-11.2,0-16.9,0-20,3.2c-3.2,3.2-3.2,8.8-3.2,20v6.2c0,11.2,0,16.9,3.2,20
+                  c3.2,3.2,8.8,3.2,20,3.2h6.2c11.2,0,16.9,0,20-3.2c3.2-3.2,3.2-8.8,3.2-20V27c0-11.2,0-16.9-3.2-20c-3.2-3.2-8.8-3.2-20-3.2H27z"
+                  />
+              </g>
+              <g id="Ellipse_46">
+                <circle class="st0" cx="44" cy="16.2" r="4.6"/>
+              </g>
+              <g id="Ellipse_55">
+                <path class="st0" d="M30.1,41.1c-6,0-10.9-4.9-10.9-10.9s4.9-10.9,10.9-10.9S41,24.1,41,30.1S36.1,41.1,30.1,41.1z M30.1,22.5
+                  c-4.2,0-7.7,3.4-7.7,7.7s3.4,7.7,7.7,7.7s7.7-3.4,7.7-7.7S34.3,22.5,30.1,22.5z"/>
+              </g>
+            </g>
+            </svg>&nbsp;jakecypress</a></li>
+
+            <!-- LINKED IN SVG AND LINK -->
+
+          <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+         <style type="text/css">
+         </style>
+         <path class="st0" d="M47.3,0.4H12.7C5.8,0.4,0.3,6,0.3,12.8v34.6c0,6.8,5.5,12.4,12.4,12.4h34.6c6.8,0,12.4-5.5,12.4-12.4V12.8
+           C59.6,6,54.1,0.4,47.3,0.4z M20.1,47.4h-7.4V20.2h7.4V47.4z M16.4,17.1c-2.4,0-4.3-2-4.3-4.4s1.9-4.4,4.3-4.4s4.3,2,4.3,4.4
+           S18.8,17.1,16.4,17.1z M49.7,47.4h-7.4V33.5c0-8.3-9.9-7.7-9.9,0v13.8H25V20.2h7.4v4.4c3.4-6.4,17.3-6.9,17.3,6.1V47.4z"/>
+         </svg>&nbsp;jpwoodard</a></li>
+        </ul>
+        <div class="workwithme">
+        <label for="yourName">WORK WITH ME</label>
+        </div>
+        <div class="insertName">
+        <input id="yourName" name="yourName" type="text" placeholder="Your Name">
+        </div>
+        <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
+        <div class="formButton">
+        <button class="submit" type="submit">submit</button>
+        </div>
+      </div>
+
+    </form>
+
   </div>
   
 </body>
