--- a/screenprint-casestudy.html
+++ b/screenprint-casestudy.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Screenprinting Process</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <nav class="nav">
+      <ul>
+        <li><a href="design.html">Design</a></li>
+        <li><a href="index.html">Jake&nbspWoodard</a></li>
+        <li><a href="process.html">Process</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="projectDisplay">
+    <img src="images/fourlayerscreenprint-blue.png">
+    <img src="images/fourlayerscreenprint-red.png">
+  </div>
 </body>
 </html>
