Finished unpolished css for 4/5 pages,
worked on 95% of css for process page, home page/index, AIGA case study, and screen print case study. The next step is CSS for the Design page with the multiple carousels.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,28 @@
     <h2>JAKE&nbspWOODARD</h2>
     <h3>GRAPHIC&nbspDESIGNER</h3>
       </div>
+
+      <div class="arrows">
+      <div class="leftArrow">
+        <a href="design.html"><img src="images/triangle-arrow.svg"></a>
+      </div>
+      <div class="downArrow">
+        <img src="images/triangle-arrow.svg">
+      </div>
+
+      <div class="rightArrow">
+        <a href="process.html"><img src="images/triangle-arrow.svg"></a>
+      </div>
+
+      </div>
+
+  </div>
+
   <div class="mainColumn">
     <div class=bioSection>
       <h3>“I'm Jake Woodard, a graphic designer merging traditional and digital media to craft clever concepts and captivating designs.”</h3>
     </div>
+    
       <div class="whyandhow">
         <div class="headshot">
           <img src="images/headshot.jpg">
@@ -38,11 +56,14 @@
           <p><span class="italics">From the strokes</span> of a paintbrush to the precision of pixels, I thrive on diversifying my craft and learning something new with every project. My designs are not just visual representations; they're stories waiting to be told, emotions waiting to be felt, and ideas waiting to be embraced. I provide design solutions to your problems and even answer problems you didn't even know you had. </p>
           </div>
           <div class="tileStack">
-          <h4>How I design</h4>
+          <h4>How I Design</h4>
           <p>As a self-proclaimed art and book nerd I find joy in delivering on concepts that find clever alternatives to the obvious. For me design is like reading a good book or telling a story, there has to be a good 3 act structure with a strong resolution or it becomes mundane. And who wants that? No matter the reason there is always a story to tell through your designs.</p>
           </div>
         </div>
       </div>
+
+      
+<!-- FORM -->
 
     <form action="contact-confirmationpage.html" method="get">
         <div class="formColumn">
@@ -67,7 +88,7 @@
            </g>
            </svg>&nbsp;jpwoodard@yahoo.com</a></li>
 
-           <!-- INSTAGRAM SVG AND LINK -->
+            <!-- INSTAGRAM SVG AND LINK -->
 
             <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
