--- a/process.html
+++ b/process.html
@@ -22,6 +22,7 @@
     </video>
 
     <div class="processShowcase">
+      <a href="index.html"><img src="images/triangle-arrow.svg" class="processleftArrow"></a>
       <img src="images/crossword.png" class="crossword">
       <img src="images/pin1.png" class="terriblePin">
       <img src="images/pin2.png" class="auroraPin">
@@ -31,7 +32,7 @@
       <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint"></a> 
     </div>
 
-    <form action="contact-confirmationpage.html" method="get">
+    <form action="contact-confirmationpage.html" method="get" class="processForm">
       <div class="formColumn">
         <h3>Want something designed? Contact me directly or submit an inquiry!</h3>
 
