--- a/design.html
+++ b/design.html
@@ -17,14 +17,35 @@
       </ul>
     </nav>
   </header>
-  <div class="projectColumn">
 
-    <div class="illustration">
-      <h1>ILLUSTRATION</h1>
-      <img src="images/partofit.jpg" class="partofitMini">
-      <img src="images/candlelight.jpg" class="candlelightMini">
-      <a href="aiga-poster-casestudy.html">aiga poster project</a>
-    </div>
+  <section class="carousel">
+  <h1>ILLUSTRATION</h1>
+  <ul class="tiles">
+    <li class="slide">
+      <div class="cards">
+        <a href="glasgow-casestudy"><img src="images/glasgow-poster-woodard.jpg" class="glasgowPoster"><div class="cardtitle">
+          <h4>glasgow poster<h4>
+          </div></a>
+      </div>
+    </li>
+    <li class="slide">
+      <div class="cards">
+        <a href="kewgardens-poster-casestudy"><img src="images/woodard-londonunderground-poster.jpg" class="londonPoster"><div class="cardtitle">
+          <h4>london underground poster<h4>
+          </div></a>
+      </div>
+    </li>
+    <li class="slide">
+      <div class="cards">
+      <a href="aiga-poster-casestudy.html"><img src="images/relientk-posters-woodard.png" class="relientkPosters">
+        <div class="cardtitle">
+        <h4>aiga poster project<h4>
+        </div>
+      </a>
+       </div> 
+    </li>
+  </ul>
+</section>
 
     <div clas="publication">
       <h1>PUBLICATION</h1>
@@ -37,6 +58,7 @@
     </div>
 
   </div>
+ 
 
   <form action="contact-confirmationpage.html" method="get">
     <div class="formColumn">
