Added Accesbility to images and worked on carousel
the Carousel is trickier then i thought it would be

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <div>
-    <video playsinline autoplay muted="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4">
+    <video playsinline autoplay muted="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4" alt="animated background sequence of teal-colored sand floating and dispersing around the main screen">
     </video>
       <div class="me">
     <h2>JAKE&nbspWOODARD</h2>
@@ -27,14 +27,14 @@
 
       <div class="arrows">
       <div class="leftArrow">
-        <a href="design.html"><img src="images/triangle-arrow.svg"></a>
+        <a href="design.html"><img src="images/triangle-arrow.svg" alt="a black triangle pointing to the left side of the screen"></a>
       </div>
       <div class="downArrow">
-        <img src="images/triangle-arrow.svg">
+        <img src="images/triangle-arrow.svg" alt="a black triangle pointing to the bottom of the screen">
       </div>
 
       <div class="rightArrow">
-        <a href="process.html"><img src="images/triangle-arrow.svg"></a>
+        <a href="process.html"><img src="images/triangle-arrow.svg" alt="a black triangle pointing to the bottom of the screen"></a>
       </div>
 
       </div>
@@ -48,7 +48,7 @@
     
       <div class="whyandhow">
         <div class="headshot">
-          <img src="images/headshot.jpg">
+          <img src="images/headshot.jpg" alt="picture of handsome young italian-american man looking rretrospectively through a bright green hedge">
         </div>
         <div class="about">
           <div class="tileStack">
