--- a/process.html
+++ b/process.html
@@ -23,13 +23,13 @@
 
     <div class="processShowcase">
       <a href="index.html"><img src="images/triangle-arrow.svg" class="processleftArrow"></a>
-      <img src="images/crossword.png" class="crossword">
-      <img src="images/pin1.png" class="terriblePin">
-      <img src="images/pin2.png" class="auroraPin">
-      <img src="images/pin1.png" class="screenPin">
-      <img src="images/terriblefate-mini.png" class="terriblefate-mini">
-      <img src="images/aurorablue.png" class="auora">
-      <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint"></a> 
+      <img src="images/crossword.png" class="crossword" alt="the words drawing, screenprint, and paining displayed in a crossword-like formation">
+      <img src="images/pin1.png" class="terriblePin" alt="a thin black like with a ball at the end of it">
+      <img src="images/pin2.png" class="auroraPin" alt="a thin black like with a ball at the end of it">
+      <img src="images/pin1.png" class="screenPin"alt="a thin black like with a ball at the end of it">
+      <img src="images/terriblefate-mini.png" class="terriblefate-mini" alt="a photo of jake woodard's artwork depicitng majora's mask from the legend of zelda video game series, its made in black ink pen">
+      <img src="images/aurorablue.png" class="auora" alt="jake's painting of a forest scene with a gorgeous blue aroma in the background">
+      <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint" alt="jake's photo of a teal and green screen printed image with graffiti-like typography and a cool doodle background"></a> 
     </div>
 
     <form action="contact-confirmationpage.html" method="get" class="processForm">
