--- a/design.html
+++ b/design.html
@@ -12,12 +12,12 @@
     <nav class="nav">
       <ul>
         <li><a href="design.html">Design</a></li>
-        <li><a href="index.html">Jake Woodard</a></li>
+        <li><a href="index.html">Jake&nbspWoodard</a></li>
         <li><a href="process.html">Process</a></li>
       </ul>
     </nav>
   </header>
-
+<div class="designwork">
   <section class="carousel">
   <h1>ILLUSTRATION</h1>
   <ul class="tiles">
@@ -58,7 +58,7 @@
     </div>
 
   </div>
- 
+</div>
 
   <form action="contact-confirmationpage.html" method="get">
     <div class="formColumn">
