--- a/design.html
+++ b/design.html
@@ -219,7 +219,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   
-  <script>
+<script>
     var previousButton, nextButton;
     var carouselContainer, cards, pageDots;
     var leftSlideIndex = 0;
@@ -228,10 +228,10 @@
       previousButton = document.querySelector('.previous');
       nextButton = document.querySelector('.next');
       carouselContainer = document.querySelector('.tiles');
-      cards = document.querySelector('slide');
-      pageDots = document.querySelector(.pagination li);
+      cards = document.querySelector('.slide');
+      pageDots = document.querySelector('.pagination li');
       
-      previousButton.addEventListener('click', previousSlide);
+      previousButton.addEventListener('click',previousSlide);
       nextButton.addEventListener('click', nextSlide);
 
       pageDots.forEach(function (dot) {
@@ -241,7 +241,7 @@
       });
     });
 
-    function previousSlide () {
+    function previousSlide() {
       if (leftSlideIndex > 0) {
         goToSlide(leftSlideIndex - 1);
       } else {
@@ -261,7 +261,8 @@
         scrollLeft: carouselContainer.offsetWidth / 1 * nextLeftSlideIndex },
         {
           duration: 200});
-      pageDots.forEach(function (dot){
+          
+      pageDots.forEach(function (dot) {
         dot.classList.remove('active');
       });
 
