changed font and transitions
i didn't feel that my header was fitting my vibe for i changed it and added a ease

--- a/aiga-poster-casestudy.html
+++ b/aiga-poster-casestudy.html
@@ -22,7 +22,7 @@
     <img src="images/candlelight.jpg" class="relientkposter">
   </div>
   <div class="nextbar">
-    <h4>NEXT&nbsp;PROJECT</h4>
+    <h4><a href="a.html">NEXT&nbsp;PROJECT</a></h4>
     </div>
 
   <div class="partofitGrid">
@@ -36,7 +36,7 @@
   </div>
   <div class="candlelightGrid">
     <div class="textContent2">
-    <h4>“Part of it”</h4>
+    <h4>“Candlelight”</h4>
     <p>This concept represents Matt Thiessen, the singer and songwriter of the album, going through the acceptance phase of a breakup. Thiessen is finally seeing his ex for what she was now that he is no longer in the relationship. The moth is a fun twist on "moth to a flame," where the moth is the light source instead. Like many other guys, he was drawn to his ex’s beauty, but in this concept, he is drawn toward the very thing that got in the way of that light: the truth, as the lyric suggests, "the truth gave me light." The skin growing back from the light shows how that mindset brings him back to life.</p>
   </div>
   <div class="leftRight">
