--- a/design.html
+++ b/design.html
@@ -17,8 +17,9 @@
       </ul>
     </nav>
   </header>
-
 <div class="designwork">
+
+  <a href="index.html"><img src="images/triangle-arrow.svg" class="designrightArrow"></a>
 
   <!--BACKGROUND ANIMATION-->
 
@@ -28,6 +29,13 @@
   <video playsinline autoplay muted="images/sand-still.png" class="designvideo2" src="images/colored-sand.mp4">
   </video>
 
+  <!--PAGE ARROW
+  
+    <div class="rightArrow">
+      <a href="process.html"><img src="images/triangle-arrow.svg" alt="a black triangle pointing to the bottom of the screen"></a>
+    </div>
+
+-->
 
   <!-- CAROUSEL 1 -->
 
