--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <video playsinline autoplay muted="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4" alt="animated background sequence of teal-colored sand floating and dispersing around the main screen">
     </video>
       <div class="me">
-    <h2>JAKE&nbspWOODARD</h2>
+    <h2 class="firstandlast">JAKE&nbspWOODARD</h2>
     <h3>GRAPHIC&nbspDESIGNER</h3>
       </div>
 
@@ -36,7 +36,6 @@
       <div class="rightArrow">
         <a href="process.html"><img src="images/triangle-arrow.svg" alt="a black triangle pointing to the bottom of the screen"></a>
       </div>
-
       </div>
 
   </div>
