--- a/screenprint-casestudy.html
+++ b/screenprint-casestudy.html
@@ -22,7 +22,7 @@
     <img src="images/fourlayerscreenprint-red.png" class="projectImage">
   </div>
   <div class="nextbar">
-    <h4>NEXT&nbsp;PROJECT</h4>
+    <h4><a href="a.html">NEXT&nbsp;PROJECT</a></h4>
     </div>
 
   <div class="casestudyGrid">
