confirmation page, clean up, and animations
Added smooth transitions to links, cleaned up some messy code, added a confirmation page. Next I plan on reducing as much unnecessary code as possible. And i need to set up lighthouse.

--- a/design.html
+++ b/design.html
@@ -62,7 +62,7 @@
 
     <li class="slideIllustration">
       <div class="cards">
-        <a href="kewgardens-poster-casestudy.html"><img src="images/woodard-londonunderground-poster.jpg" class="londonPoster" alt="poster featuring Kew Gardens for the London Underground"></a>
+        <a href="kewgardens-poster-casestudy.html"><img src="images/woodard-londonunderground-poster.png" class="horizontalThumbnail" alt="poster featuring Kew Gardens for the London Underground"></a>
       </div>
       <div class="cardtitle">
         <h4><a href="kewgardens-poster-casestudy.html">london underground</a></h4>
@@ -71,7 +71,7 @@
 
     <li class="slideIllustration">
       <div class="cards">
-        <a href="glasgow-casestudy.html"><img src="images/glasgow-poster-woodard.jpg" class="glasgowPoster" alt="glasgow style poster resembling spookschool design work"></a>
+        <a href="glasgow-casestudy.html"><img src="images/glasgow-poster-woodard.png" class="horizontalThumbnail" alt="glasgow style poster resembling spookschool design work"></a>
       </div>
       <div class="cardtitle">
         <h4> <a href="glasgow-casestudy.html">glasgow poster</a></h4>
@@ -95,10 +95,11 @@
   <ul class="publicationCarousel">
     <li class="slidePublication">
       <div class="cards">
-        <a href="stormlightarchives-resign.html"><img src="images/bookcovers-comingsoon.png" class="horizontalThumbnail" alt="placeholder image that states 'stormlight bookcovers in progress'"></a>
-      </div>
-      <div class="cardtitle">
-        <h4><a href="stormlightarchives-resign.html">way of kings book covers</a></h4>
+      <a href="instrumental-guitar.html"><img src="images/Yvette spread.jpg" class="horizontalThumbnail" alt="sample spread from the instrumental guitar publication featuring Yvette Young">
+      </a>
+       </div> 
+       <div class="cardtitle">
+        <h4><a href="instrumental-guitar.html">instrumental guitar book</a></h4>
         </div>
     </li>
     
@@ -109,15 +110,14 @@
       <div class="cardtitle">
         <h4><a href="unf-aahd.html">aahd redesign</a></h4>
         </div>
-
     </li>
+
     <li class="slidePublication">
       <div class="cards">
-      <a href="instrumental-guitar.html"><img src="images/Yvette spread.jpg" class="horizontalThumbnail" alt="sample spread from the instrumental guitar publication featuring Yvette Young">
-      </a>
-       </div> 
-       <div class="cardtitle">
-        <h4><a href="instrumental-guitar.html">instrumental guitar book</a></h4>
+        <a href="stormlightarchives-resign.html"><img src="images/bookcovers-comingsoon.png" class="horizontalThumbnail" alt="placeholder image that states 'stormlight bookcovers in progress'"></a>
+      </div>
+      <div class="cardtitle">
+        <h4><a href="stormlightarchives-resign.html">way of kings book covers</a></h4>
         </div>
     </li>
   </ul>
@@ -137,22 +137,22 @@
   <ul class="brandingCarousel">
     <li class="slideBranding">
       <div class="cards">
+        <a href="veritas.html"><img src="images/veritas-earbuds-packaging.png" class="horizontalThumbnail" alt="product mockups using the veritas logo"></a>
+      </div>
+      <div class="cardtitle">
+        <h4><a href="veritas.html">veritas brand identity</a></h4>
+        </div>
+    </li>
+
+    <li class="slideBranding">
+      <div class="cards">
         <a href="woody'sroofing.html"><img src="images/woody'sroofing.png" class="horizontalThumbnail" alt="logo of a cowboyhat merged with a roof"></a>
       </div>
       <div class="cardtitle">
         <h4> <a href="woody'sroofing.html">woody's roofing logo</a></h4>
         </div>
     </li>
-    
-    <li class="slideBranding">
-      <div class="cards">
-        <a href="veritas.html"><img src="images/veritas-earbuds-packaging.png" class="horizontalThumbnail" alt="product mockups using the veritas logo"></a>
-      </div>
-      <div class="cardtitle">
-        <h4><a href="veritas.html">veritas brand identity</a></h4>
-        </div>
 
-    </li>
     <li class="slideBranding">
       <div class="cards">
       <a href="artfortheworld-brandredesign.html"><img src="images/aftw-rebrandintro.png" class="horizontalThumbnail" alt="art for the world brand guidelines">
@@ -414,7 +414,6 @@
     }
   })();
 </script>
-
 
 </body>
 </html>
