lighthouse audit and changes
made accesibitly changes to get the perfect score on each page for accessibiltiy. for some reason design has 1 error for contrast.

--- a/contact-confirmationpage.html
+++ b/contact-confirmationpage.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <div class=confirmation>
-      <img src="images/backarrow.gif" class="return">
+      <img src="images/backarrow.gif" class="return" alt="animated gray arrow that is gesturing toward the home button called 'jake woodard'">
       <h3>Thank you for submitting a request! Jake will get back to you shortly. Looking foward to working with you.</h3>
     </div>
   </body>
