--- a/design.html
+++ b/design.html
@@ -19,7 +19,7 @@
   </header>
 <div class="designwork">
 
-  <a href="index.html"><img src="images/triangle-arrow.svg" class="designrightArrow"></a>
+  <a href="index.html"><img src="images/triangle-arrow.svg" class="designrightArrow" alt="dark blue arrow facing right"></a>
 
   <!--BACKGROUND ANIMATION-->
 
@@ -45,9 +45,9 @@
       <li></li>
       <li></li>
     </ul>
-    <button type="button" class="carouselArrow previousIllustration"><img src="images/sketchy-carat-left.svg"></button>
-    <button type="button" class="carouselArrow nextIllustration"><img src="images/sketchy-carat-right.svg"></button>
-  <h1>ILLUSTRATION</h1>
+    <button type="button" class="carouselArrow previousIllustration" aria-label="carouselArrow"><img src="images/sketchy-carat-left.svg" alt="sketchy teal colored arrow pointing left"></button>
+    <button type="button" class="carouselArrow nextIllustration" aria-label="carouselArrow"><img src="images/sketchy-carat-right.svg" alt="sketchy teal colored arrow pointing right"></button>
+  <h2>ILLUSTRATION</h2>
   <ul class="illustrationCarousel">
 
     <li class="slideIllustration">
@@ -56,7 +56,7 @@
       </a>
        </div> 
        <div class="cardtitle">
-        <h4><a href="aiga-poster-casestudy.html">aiga poster project</a></h4>
+        <p><a href="aiga-poster-casestudy.html">aiga poster project</a><p>
         </div>
     </li>
 
@@ -65,7 +65,7 @@
         <a href="kewgardens-poster-casestudy.html"><img src="images/woodard-londonunderground-poster.png" class="horizontalThumbnail" alt="poster featuring Kew Gardens for the London Underground"></a>
       </div>
       <div class="cardtitle">
-        <h4><a href="kewgardens-poster-casestudy.html">london underground</a></h4>
+        <p><a href="kewgardens-poster-casestudy.html">london underground</a></p>
         </div>
     </li>
 
@@ -74,7 +74,7 @@
         <a href="glasgow-casestudy.html"><img src="images/glasgow-poster-woodard.png" class="horizontalThumbnail" alt="glasgow style poster resembling spookschool design work"></a>
       </div>
       <div class="cardtitle">
-        <h4> <a href="glasgow-casestudy.html">glasgow poster</a></h4>
+        <p> <a href="glasgow-casestudy.html">glasgow poster</a></p>
         </div>
     </li>
 
@@ -89,9 +89,9 @@
     <li></li>
     <li></li>
   </ul>
-  <button type="button" class="carouselArrow previousPublication"><img src="images/sketchy-carat-left.svg"></button>
-  <button type="button" class="carouselArrow nextPublication"><img src="images/sketchy-carat-right.svg"></button>
-  <h1>PUBLICATION</h1>
+  <button type="button" class="carouselArrow previousPublication" aria-label="carouselArrow"><img src="images/sketchy-carat-left.svg" alt="sketchy teal colored arrow pointing left"></button>
+  <button type="button" class="carouselArrow nextPublication" aria-label="carouselArrow"><img src="images/sketchy-carat-right.svg" alt="sketchy teal colored arrow pointing right"></button>
+  <h2>PUBLICATION</h2>
   <ul class="publicationCarousel">
     <li class="slidePublication">
       <div class="cards">
@@ -99,7 +99,7 @@
       </a>
        </div> 
        <div class="cardtitle">
-        <h4><a href="instrumental-guitar.html">instrumental guitar book</a></h4>
+        <p><a href="instrumental-guitar.html">instrumental guitar book</a></p>
         </div>
     </li>
     
@@ -108,7 +108,7 @@
         <a href="unf-aahd.html"><img src="images/unf-catalog-publication.png" class="horizontalThumbnail" alt="unf catalog spreads"></a>
       </div>
       <div class="cardtitle">
-        <h4><a href="unf-aahd.html">aahd redesign</a></h4>
+        <p><a href="unf-aahd.html">aahd redesign</a></p>
         </div>
     </li>
 
@@ -117,7 +117,7 @@
         <a href="stormlightarchives-resign.html"><img src="images/bookcovers-comingsoon.png" class="horizontalThumbnail" alt="placeholder image that states 'stormlight bookcovers in progress'"></a>
       </div>
       <div class="cardtitle">
-        <h4><a href="stormlightarchives-resign.html">way of kings book covers</a></h4>
+        <p><a href="stormlightarchives-resign.html">way of kings book covers</a></p>
         </div>
     </li>
   </ul>
@@ -131,16 +131,16 @@
     <li></li>
     <li></li>
   </ul>
-  <button type="button" class="carouselArrow previousBranding"><img src="images/sketchy-carat-left.svg"></button>
-  <button type="button" class="carouselArrow nextBranding"><img src="images/sketchy-carat-right.svg"></button>
-  <h1>BRANDING</h1>
+  <button type="button" class="carouselArrow previousBranding" aria-label="carouselArrow"><img src="images/sketchy-carat-left.svg" alt="sketchy teal colored arrow pointing left"></button>
+    <button type="button" class="carouselArrow nextBranding" aria-label="carouselArrow"><img src="images/sketchy-carat-right.svg" alt="sketchy teal colored arrow pointing right"></button>
+  <h2>BRANDING</h2>
   <ul class="brandingCarousel">
     <li class="slideBranding">
       <div class="cards">
         <a href="veritas.html"><img src="images/veritas-earbuds-packaging.png" class="horizontalThumbnail" alt="product mockups using the veritas logo"></a>
       </div>
       <div class="cardtitle">
-        <h4><a href="veritas.html">veritas brand identity</a></h4>
+        <p><a href="veritas.html">veritas brand identity</a></p>
         </div>
     </li>
 
@@ -149,7 +149,7 @@
         <a href="woody'sroofing.html"><img src="images/woody'sroofing.png" class="horizontalThumbnail" alt="logo of a cowboyhat merged with a roof"></a>
       </div>
       <div class="cardtitle">
-        <h4> <a href="woody'sroofing.html">woody's roofing logo</a></h4>
+        <p> <a href="woody'sroofing.html">woody's roofing logo</a></p>
         </div>
     </li>
 
@@ -159,7 +159,7 @@
       </a>
        </div> 
        <div class="cardtitle">
-        <h4><a href="artfortheworld-brandredesign.html">art for the world rebrand</a></h4>
+        <p><a href="artfortheworld-brandredesign.html">art for the world rebrand</a></p>
         </div>
     </li>
   </ul>
@@ -226,16 +226,19 @@
        </svg>&nbsp;jpwoodard</a></li>
       </ul>
       <div class="workwithme">
-      <label for="yourName">WORK WITH ME</label>
+        <label for="yourName">WORK WITH ME</label>
+        </div>
+        <div class="insertName">
+        <input id="yourName" name="yourName" type="text" placeholder="Your Name">
+        </div>
+        <div class="insertEmail">
+          <input id="yourEmail" name="yourEmail" type="email" placeholder="Your Email">
+          </div>
+        <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
+        <div class="formButton">
+        <button class="submit" type="submit">submit</button>
+        </div>
       </div>
-      <div class="insertName">
-      <input id="yourName" name="yourName" type="text" placeholder="Your Name">
-      </div>
-      <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
-      <div class="formButton">
-      <button class="submit" type="submit">submit</button>
-      </div>
-    </div>
 
   </form>
 
