--- a/screenprint-casestudy.html
+++ b/screenprint-casestudy.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
   <div class="projectDisplay">
-    <img src="images/fourlayerscreenprint-blue.png" class="projectImage">
-    <img src="images/fourlayerscreenprint-red.png" class="projectImage">
+    <img src="images/fourlayerscreenprint-blue.png" class="projectImage" alt="jake's student work of a teal and green screen printed image with graffiti-like typography and a cool doodle background">
+    <img src="images/fourlayerscreenprint-red.png" class="projectImage" alt="jake's student work of a red and gold screen printed image with graffiti-like typography and a cool doodle background">
   </div>
   <div class="nextbar">
     <h4><a href="a.html">NEXT&nbsp;PROJECT</a></h4>
@@ -28,7 +28,7 @@
   <div class="casestudyGrid">
     <div class="processDescription">
 
-      <img src="images/silkscreen-sketch.png" class="silkscreenSketch">
+      <img src="images/silkscreen-sketch.png" class="silkscreenSketch" alt="image of the words 'silk screen' and 'sketch' placed in a way where they resemble a scrabble board. Both words share the same letter 's'. The font is a sketchy hand drawn display font.">
 
       <div class="processType">
       <h4>Discovering Screenprint</h4>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class=processImage>
-      <img src="images/screenprint-inclass.jpeg" class="screenprint-inclass"> 
+      <img src="images/screenprint-inclass.jpeg" class="screenprint-inclass" alt="Photo of a table with students sitting around it. On the table, there are scattered screenprints of a statue figure."> 
     </div>
   </div>
 
@@ -101,16 +101,19 @@
        </svg>&nbsp;jpwoodard</a></li>
       </ul>
       <div class="workwithme">
-      <label for="yourName">WORK WITH ME</label>
+        <label for="yourName">WORK WITH ME</label>
+        </div>
+        <div class="insertName">
+        <input id="yourName" name="yourName" type="text" placeholder="Your Name">
+        </div>
+        <div class="insertEmail">
+          <input id="yourEmail" name="yourEmail" type="email" placeholder="Your Email">
+          </div>
+        <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
+        <div class="formButton">
+        <button class="submit" type="submit">submit</button>
+        </div>
       </div>
-      <div class="insertName">
-      <input id="yourName" name="yourName" type="text" placeholder="Your Name">
-      </div>
-      <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
-      <div class="formButton">
-      <button class="submit" type="submit">submit</button>
-      </div>
-    </div>
 
   </form>
   
