--- a/aiga-poster-casestudy.html
+++ b/aiga-poster-casestudy.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
   <div class="projectDisplay">
-    <img src="images/partofit.jpg" class="relientkposter">
-    <img src="images/candlelight.jpg" class="relientkposter">
+    <img src="images/partofit.jpg" class="relientkposter" alt="Hand-painted poster for the band Relient K. It features a boy flying away from the foreground while grasping onto a cloud. The cloud resembles a woman.">
+    <img src="images/candlelight.jpg" class="relientkposter" alt="Hand-painted poster for the band Relient K. It features a skeleton hand erupting from the earth, with its flesh regrowing towards the top. There are spruce trees in the background. The focal point of the drawing is a moth radiating a bright light as it rests upon the finger of the skeleton's hand.">
   </div>
   <div class="nextbar">
     <h4><a href="a.html">NEXT&nbsp;PROJECT</a></h4>
@@ -27,7 +27,7 @@
 
   <div class="partofitGrid">
     <div class="leftImage">
-    <img src="images/partofit-zoomed.png" class="partofit-zoomed">
+    <img src="images/partofit-zoomed.png" class="partofit-zoomed" alt="Zoomed-in picture of the 'Part of It' photo, focusing on the boy grasping the cloud with his hand.">
   </div>
     <div class="textContent">
     <h4>“Part of it”</h4>
@@ -40,7 +40,7 @@
     <p>This concept represents Matt Thiessen, the singer and songwriter of the album, going through the acceptance phase of a breakup. Thiessen is finally seeing his ex for what she was now that he is no longer in the relationship. The moth is a fun twist on "moth to a flame," where the moth is the light source instead. Like many other guys, he was drawn to his ex’s beauty, but in this concept, he is drawn toward the very thing that got in the way of that light: the truth, as the lyric suggests, "the truth gave me light." The skin growing back from the light shows how that mindset brings him back to life.</p>
   </div>
   <div class="leftRight">
-    <img src="images/candlelight-zoomed.png" class="candlelight-zoomed">
+    <img src="images/candlelight-zoomed.png" class="candlelight-zoomed" alt="Zoomed-in photo of the 'Candlelight' poster. Upon closer inspection, you can see the flesh of the skin regrowing around the bones.">
   </div>
   </div>
 
@@ -103,16 +103,19 @@
        </svg>&nbsp;jpwoodard</a></li>
       </ul>
       <div class="workwithme">
-      <label for="yourName">WORK WITH ME</label>
+        <label for="yourName">WORK WITH ME</label>
+        </div>
+        <div class="insertName">
+        <input id="yourName" name="yourName" type="text" placeholder="Your Name">
+        </div>
+        <div class="insertEmail">
+          <input id="yourEmail" name="yourEmail" type="email" placeholder="Your Email">
+          </div>
+        <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
+        <div class="formButton">
+        <button class="submit" type="submit">submit</button>
+        </div>
       </div>
-      <div class="insertName">
-      <input id="yourName" name="yourName" type="text" placeholder="Your Name">
-      </div>
-      <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
-      <div class="formButton">
-      <button class="submit" type="submit">submit</button>
-      </div>
-    </div>
 
   </form>
   
