--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
     </video>
 
     <div class="processShowcase">
-      <a href="index.html"><img src="images/triangle-arrow.svg" class="processleftArrow"></a>
+      <a href="index.html"><img src="images/triangle-arrow.svg" class="processleftArrow" alt="dark blue triangle arrow pointing right"></a>
       <img src="images/crossword.png" class="crossword" alt="the words drawing, screenprint, and paining displayed in a crossword-like formation">
       <img src="images/pin1.png" class="terriblePin" alt="a thin black like with a ball at the end of it">
       <img src="images/pin2.png" class="auroraPin" alt="a thin black like with a ball at the end of it">
@@ -91,16 +91,19 @@
          </svg>&nbsp;jpwoodard</a></li>
         </ul>
         <div class="workwithme">
-        <label for="yourName">WORK WITH ME</label>
+          <label for="yourName">WORK WITH ME</label>
+          </div>
+          <div class="insertName">
+          <input id="yourName" name="yourName" type="text" placeholder="Your Name">
+          </div>
+          <div class="insertEmail">
+            <input id="yourEmail" name="yourEmail" type="email" placeholder="Your Email">
+            </div>
+          <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
+          <div class="formButton">
+          <button class="submit" type="submit">submit</button>
+          </div>
         </div>
-        <div class="insertName">
-        <input id="yourName" name="yourName" type="text" placeholder="Your Name">
-        </div>
-        <textarea id="textInquiry" name="inquiry" placeholder="Write a brief explanation of your request"></textarea>
-        <div class="formButton">
-        <button class="submit" type="submit">submit</button>
-        </div>
-      </div>
 
     </form>
 
