fixed capitlization on link causing error
made the yvette image sematically correct

--- a/design.html
+++ b/design.html
@@ -95,7 +95,7 @@
   <ul class="publicationCarousel">
     <li class="slidePublication">
       <div class="cards">
-      <a href="instrumental-guitar.html"><img src="images/Yvette spread.jpg" class="horizontalThumbnail" alt="sample spread from the instrumental guitar publication featuring Yvette Young">
+      <a href="instrumental-guitar.html"><img src="images/yvette-spread.jpg" class="horizontalThumbnail" alt="sample spread from the instrumental guitar publication featuring Yvette Young">
       </a>
        </div> 
        <div class="cardtitle">
